--- a/website/app/styles/app.css
+++ b/website/app/styles/app.css
@@ -849,16 +849,12 @@ video {
   margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .rounded-full {
   border-radius: 9999px;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .border {
@@ -1043,6 +1039,10 @@ video {
   text-transform: uppercase;
 }
 
+.lowercase {
+  text-transform: lowercase;
+}
+
 .capitalize {
   text-transform: capitalize;
 }
@@ -1211,8 +1211,8 @@ video {
     min-height: 1400px;
   }
 
-  .md\:w-\[100px\] {
-    width: 100px;
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
   .md\:w-max {
@@ -1220,16 +1220,8 @@ video {
     width: max-content;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
   .md\:w-\[55ch\] {
     width: 55ch;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
   }
 
   .md\:min-w-\[768px\] {
